--- a/src/app/components/menu.component/menu.component.html
+++ b/src/app/components/menu.component/menu.component.html
@@ -9,6 +9,7 @@
                 <li class="menu-item"><a [routerLink]="['/products']">Productos</a></li>
                 <li class="menu-item"><a [routerLink]="['/coches']">Coche</a></li>
                 <li class="menu-item"><a [routerLink]="['/deportes']">Deportes</a></li>
+                <li class="menu-item"><a [routerLink]="['/libreria']">Librería</a></li>
             </ul>
         </div>
     </div>
